[package]
name = "rtasks"
version = "0.1.0"
edition = "2021"
authors = ["Rafael"]
description = "A simple, efficient terminal-based task management application"
readme = "README.md"
repository = "https://github.com/yourusername/rtasks"
license = "MIT"
keywords = ["cli", "task", "todo", "terminal", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
